--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-requests = "^2.31.0"
 prometheus-client = "^0.17.1"
+up-bank-api = "^1.1.0"
 
 
 [build-system]
